fixed left padding of text box on mobile

--- a/client/src/components/bookbox/bookbox.style.scss
+++ b/client/src/components/bookbox/bookbox.style.scss
@@ -102,6 +102,7 @@
       .bookbox-desc {
         text-align: center;
         // padding: 10px;
+        padding-left: 10px;
       }
       .bookbox-button {
         margin-top: 5px;
